--- a/portfolio/aboutme.css
+++ b/portfolio/aboutme.css
@@ -5,8 +5,57 @@
     }
 
     /* ...............HEAD............... */
-
-
+    header{
+        background-color: #AE0204;
+        padding-top: 30px;
+        padding-inline: 15px;
+        padding-bottom: 15px;
+        margin: 0px;
+    }
+    
+    .top-nav{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: space-between;
+        gap: 190px;
+        margin-bottom: 70px;
+    }
+    
+    /* ............................................................. */
+    
+    .header-logo {
+        width: 150px;
+        height: auto;
+    }
+    
+    /* ............................................................. */
+    
+    
+    nav ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        font-family: 'glory', sans-serif;
+        font-weight: bold;
+        gap: 10px;
+    }
+    
+    nav ul a {
+        text-decoration: none;
+        padding: 6px;
+        padding-inline: 13px;
+        color: #faf6e9;
+    }
+    
+    nav ul a:hover{
+        padding: 6px;
+        padding-inline: 13px;
+        background-color: #680203;
+        border-radius: 3px;
+    }
+    
+/* 
     .header-logo {
         width: 150px;
         height: auto;
@@ -44,34 +93,49 @@
         flex-direction: row;
         align-items: center;
         gap: 150px;
-    }
+    } */
 
 
     /* ..............INTRO ARREANGEMENT ++.................... */
 
 
-    #intro{
-        color: #faf6e9;
+    .intro{
+        color: #ffeaa6;
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
 		font-family: 'glory', sans-serif;
-        font-size: 0.72rem;
-        font-weight: lighter;
         background-color: #AE0204;
         padding: 33%;
         padding-top: 0;
-        padding-bottom: 50px;        
+        padding-bottom: 50px;    
+        margin: 0px;    
     }
+
+    #solutions{
+        font-size: 4rem;
+        font-weight: bolder;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        text-transform: uppercase;
+        color: #faf6e9;
+    }
+
+    .intro {
+        font-size: 0.8rem;
+        font-weight: lighter;
+    }
+ /* ..................................................... */
+
+
        
     
-    #intro h1{
+    /* #intro h1{
        
         margin-top: 10px;
         font-size: 0.7rem;
         letter-spacing: 0.7px;
-    }
+    } */
 
     /* .................ABOUT ME.................... */
     #down-section-2 h3{
