--- a/portfolio/contact.css
+++ b/portfolio/contact.css
@@ -5,45 +5,55 @@
     }
 
     /* ...............HEAD............... */
-
-
+    header{
+        background-color: #AE0204;
+        padding-top: 30px;
+        padding-inline: 15px;
+        padding-bottom: 15px;
+        margin: 0px;
+    }
+    
+    .top-nav{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: space-between;
+        /* gap: 100px; */
+        margin-inline: 60px;
+        margin-bottom: 70px;
+    }
+    
+    /* ............................................................. */
+    
     .header-logo {
         width: 150px;
         height: auto;
     }
-
-    header{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 0px;
-		background-color: #AE0204;
-        padding-top: 30px;
-        padding-inline: 100px;
-        padding-bottom: 50px;        
-    }
+    
+    /* ............................................................. */
+    
     
     nav ul {
-        color: #faf6e9;
         list-style: none;
         display: flex;
         flex-direction: row;
         font-family: 'glory', sans-serif;
         font-weight: bold;
-        gap: 20px;
+        gap: 10px;
     }
     
-    .header-logo {
-        width: 150px;
-        height: auto;
+    nav ul a {
+        text-decoration: none;
+        padding: 6px;
+        padding-inline: 13px;
+        color: #faf6e9;
     }
     
-    #header-info-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 150px;
+    nav ul a:hover{
+        padding: 6px;
+        padding-inline: 13px;
+        background-color: #680203;
+        border-radius: 3px;
     }
 /* ..............MAIN BODY....................... */
 
